--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ authors = ["Justin Son <redwood9d@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.10"
+"ruamel.yaml" = "^0.17.21"
 
 [tool.poetry.dev-dependencies]
 
