--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,9 @@ description = ""
 authors = ["Justin Son <redwood9d@gmail.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = ">=3.10,<3.11"
 "ruamel.yaml" = "^0.17.21"
+pyinstaller = "^4.9"
 
 [tool.poetry.dev-dependencies]
 
